--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '2'
 services:
   app:
-    image: phoenix:dev
+    image: nicbet/phoenix:dev
     build: .
     ports:
       - "4000:4000"
