--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '2'
 services:
   app:
-    image: nicbet/phoenix:1.4.10
+    image: zolrath/phoenix:1.5.1
     build:
       context: ..
       dockerfile: Dockerfile
