--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '2'
 services:
   app:
-    image: nicbet/phoenix:1.4.11
+    image: zolrath/phoenix:1.5.1
     build: .
     ports:
       - "4000:4000"
